@@ -1,3 +1,10 @@
+2008-11-03 Sean Swehla  <smswehla@linux.vnet.ibm.com>
+
+	* msgqueue.c:
+	Fixed [ 2192058 ] Potential buffer overflow in
+	msgqueue.c:localConnectServer
+	(based on patch by Klaus Kampf)
+
 2008-10-31 Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* sfcBroker.c:
